--- a/04-creating-a-red5-pro-application/example/src/main/webapp/WEB-INF/web.xml
+++ b/04-creating-a-red5-pro-application/example/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,10 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
          
-    <display-name>live</display-name>       
+    <display-name>example</display-name>       
     <context-param>
         <param-name>webAppRootKey</param-name>
-        <param-value>/live</param-value>
+        <param-value>/example</param-value>
     </context-param>
     <servlet>
         <servlet-name>rtmpt</servlet-name>
