--- a/04-creating-a-red5-pro-application/example/pom.xml
+++ b/04-creating-a-red5-pro-application/example/pom.xml
@@ -24,17 +24,23 @@
        </dependency>
 
        <dependency>
-           <groupId>org.red5</groupId>
-           <artifactId>red5-parent</artifactId>
-           <version>1.0.9-M10</version>
-           <type>pom</type>
-       </dependency>
+          <groupId>org.red5</groupId>
+          <artifactId>red5-parent</artifactId>
+          <version>1.0.10-M9</version>
+          <type>pom</type>
+      </dependency>
 
+      <dependency>
+          <groupId>org.red5</groupId>
+          <artifactId>tomcatplugin</artifactId>
+          <version>2.0.9</version>
+      </dependency>
+      
        <!-- https://mvnrepository.com/artifact/org.red5/red5-server -->
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server</artifactId>
-           <version>1.0.9-M10</version>
+           <version>1.0.10-M9</version>
            <type>jar</type>
            <scope>provided</scope>
 
