--- a/04-creating-a-red5-pro-application/example/src/main/webapp/WEB-INF/web.xml
+++ b/04-creating-a-red5-pro-application/example/src/main/webapp/WEB-INF/web.xml
@@ -98,4 +98,18 @@
         <filter-name>CORS</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <!-- WebSocket filter -->
+    <filter>
+        <filter-name>WebSocketFilter</filter-name>
+        <filter-class>org.red5.net.websocket.server.WsFilter</filter-class>
+        <async-supported>true</async-supported>
+    </filter>
+    <filter-mapping>
+        <filter-name>WebSocketFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+    
 </web-app>
