--- a/06-application-level-logging/example/pom.xml
+++ b/06-application-level-logging/example/pom.xml
@@ -28,7 +28,7 @@
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-parent</artifactId>
-           <version>1.0.9-M10</version>
+           <version>1.0.10-M9</version>
            <type>pom</type>
        </dependency>
 
@@ -39,11 +39,17 @@
             <scope>provided</scope>
         </dependency>  
         
+        <dependency>
+          <groupId>org.red5</groupId>
+          <artifactId>tomcatplugin</artifactId>
+          <version>2.0.9</version>
+        </dependency>
+        
        <!-- https://mvnrepository.com/artifact/org.red5/red5-server -->
        <dependency>
            <groupId>org.red5</groupId>
            <artifactId>red5-server</artifactId>
-           <version>1.0.9-M10</version>
+           <version>1.0.10-M9</version>
            <type>jar</type>
            <scope>provided</scope>
 
