--- a/05-authenticating-connections/example/pom.xml
+++ b/05-authenticating-connections/example/pom.xml
@@ -52,20 +52,30 @@
            <version>1.0.10-M9</version>
            <type>jar</type>
            <scope>provided</scope>
-
-           <!-- either exclude the mina-core or include the bundle plugin below -->
-           <exclusions>
-                 <exclusion>
-                     <groupId>org.apache.mina</groupId>
-                     <artifactId>mina-core</artifactId>
-                 </exclusion>
-             </exclusions>
        </dependency>
     
     
   </dependencies>
   <build>
     <finalName>example</finalName>
+    <plugins>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        
+        <plugin>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <extensions>true</extensions>
+        </plugin>
+            
+    </plugins>
   </build>
   
   <properties>
